# meteofrance-api

./: .cookiecutter.json  .coveragerc.disable  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml  requirements_test.txt  setup.cfg  setup.py  setup.py.disable  tests.yml
.github/: CODEOWNERS  settings.yml  stale.yml
.github/ISSUE_TEMPLATE/: config.yml  issue.md
.github/workflows/: constraints.txt  coverage.yml  publish.yml  python-package.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/meteofrance/: __init__.py  __main__.py  auth.py  client.py  const.py  exceptions.py  forecast.py  helpers.py  place.py  rain.py  session.py  warning.py
src/meteofrance/model/: __init__.py  forecast.py  picture_of_the_day.py  place.py  rain.py  warning.py
src/meteofrance_api/: __init__.py  __main__.py  client.py  const.py  exceptions.py  helpers.py  session.py
src/meteofrance_api/model/: __init__.py  dictionary.py  forecast.py  observation.py  picture_of_the_day.py  place.py  rain.py  warning.py
tests/: __init__.py  const.py  fixtures.py  test_auth.py  test_exception.py  test_forecast.py  test_helpers.py  test_integrations.py  test_observation.py  test_picture_of_the_day.py  test_place.py  test_rain.py  test_session.py  test_warning.py  test_warning_dictionary.py
tests/fixtures/: rain_expected.json  rain_not_expected.json  report_picture_du_jour.txt  warning_full_13.json  warning_full_1310.json  warning_full_31.json
