[tool.poetry]
name = "meteofrance-api"
version = "1.4.0"
description = "Python client for Météo-France API."
authors = ["oncleben31 <oncleben31@gmail.com>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/meteofrance-api"
repository = "https://github.com/hacf-fr/meteofrance-api"
documentation = "https://meteofrance-api.readthedocs.io"
keywords = ["weather", "weather-api", "meteo"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/meteofrance-api/releases"

[tool.poetry.dependencies]
python = "^3.8.18"
requests = "^2.32.3"
pytz = ">=2024.1"
typing-extensions = {version = ">=3.8.18,<5.0.0", python = "~3.8 || ~3.9 || ~3.10 || ~3.11"}

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
requests_mock = "^1.12.1"
coverage = {extras = ["toml"], version = "^7.2"}
safety = "^3.2.14"
mypy = "^1.11.2"
typeguard = "^4.4.0"
xdoctest = {extras = ["colors"], version = "^1.1.2"}
sphinx = "^7.1.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^3.5.0"
flake8 = "^7.1.1"
black = "^24.8.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.10.31"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.14.1"
darglint = "^1.8.1"
pre-commit-hooks = "^5.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-click = "^6.0.0"
Pygments = "^2.15.0"
types-requests = "^2.32.0"
types-pytz = "^2024.2.0"

[tool.poetry.scripts]
meteofrance-api = "meteofrance_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meteofrance_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 90

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
