[tool.poetry]
name = "meteofrance-api"
version = "1.4.0"
description = "Python client for Météo-France API."
authors = ["oncleben31 <oncleben31@gmail.com>", "quentame <polletquentin74@me.com>", "HACF <contact@hacf.fr>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/hacf-fr/meteofrance-api"
repository = "https://github.com/hacf-fr/meteofrance-api"
documentation = "https://meteofrance-api.readthedocs.io"
keywords = ["weather", "weather-api", "meteo"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/hacf-fr/meteofrance-api/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.3"
pytz = ">=2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
requests_mock = "1.12.1"
coverage = {extras = ["toml"], version = "7.13.2"}
safety = "3.7.0"
mypy = "1.19.1"
typeguard = "4.4.4"
pre-commit = "4.5.1"
flake8 = "7.3.0"
black = "26.1.0"
flake8-bandit = "4.1.1"
flake8-bugbear = "25.11.29"
flake8-docstrings = "1.7.0"
flake8-rst-docstrings = "0.4.0"
pep8-naming = "0.15.1"
darglint = "1.8.1"
pre-commit-hooks = "6.0.0"
Pygments = "2.19.2"
types-requests = "2.32.4.20260107"
types-pytz = "2024.2.0.20241221"

# docs (Python >= 3.14)
furo = {version = "==2025.12.19", python = ">=3.14"}
myst-parser = {version = "==5.0.0", python = ">=3.14"}
sphinx = {version = "==9.1.0", python = ">=3.14"}
sphinx-autobuild = {version = "==2025.8.25", python = ">=3.14"}

[tool.poetry.scripts]
meteofrance-api = "meteofrance_api.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meteofrance_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100 reduce targetwaiting for tests creation
fail_under = 90

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
