

[metadata]
description-file = README.md

[tool:pytest]
addopts = --verbose
python_files = tests/*.py

[tool:isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build,.eggs
doctests = True
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# ignore =
#     E501,
#     W503,
#     E203,
#     D202,
#     W504